--- a/main.css
+++ b/main.css
@@ -41,44 +41,8 @@ body{
     color: white;
 }
 
-.button1{
-    position: absolute;
-    width: 40%;
-    margin-top: 10%;
-}
-.button2{
-    position: absolute;
-    width: 40%;
-    margin-top: 50%;
-    margin-left: 56%;
-}
-.button3{
-    position: absolute;
-    width: 40%;
-    margin-top: 90%;
-}
-
-.bitcoin{
+.MMtext{
+    font-size: 3vw;
+    font-weight: 500;
     color: white;
-    font-size: 12px;
-    position:absolute;
-    margin-top:15%;
-    margin-left:46%;
-}
-
-.ripple{
-    color: white;
-    font-size: 12px;
-    position:absolute;
-    margin-top: 95%;
-    margin-left: 46%;
-}
-
-.ethereum{
-    color: white;
-    font-size: 12px;
-    position: absolute;
-    padding-right: 45%;
-    margin-top: 55%;
-    margin-left: 3%;
 }
